--- a/mustafasadiq.com/package.json
+++ b/mustafasadiq.com/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "prettier ."
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
@@ -36,6 +37,8 @@
   },
   "devDependencies": {
     "eslint": "^8.52.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "3.0.3"
   }
 }
